Tue Mar 10 15:01:05 1998  Federico Mena <federico@nuclecu.unam.mx>

	* gnome-color-selector.c (gnome_color_selector_new): Use the
	proper visuals for the color selectors.

Mon Mar  9 23:59:41 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-ted.c (gtk_ted_load_layout): Remove gracious printf.

1998-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-init.c (gnome_init): Only set `program_invocation_name'
	and `program_invocation_short_name' if they are not already set.

Mon Mar  9 23:21:22 1998  Eckehard Berns  <eb@berns.prima.de>

	* stock_demo.c: added stock icon properties,
	added descriptions for `other icons'

	* gnome-stock*: changed other icons to look like tigert's and added
	a preferences stock icon.

Mon Mar  9 17:37:44 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-init.c (gnome_init): Set program_invocation_short_name.

Mon Mar  9 17:37:17 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c (gnome_init): Initialize the
	program_invocation_name.  Wonder if this fixes stuff for people?

Sun Mar  8 17:59:38 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (INCLUDES): Added @SUPPORTINCS@.
	(ted_demo_LDADD): Added @LIBSUPPORT@.
	(stock_demo_LDADD): Likewise.

Sat Mar  7 01:21:57 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (gnome_client_new_without_connection): Don't look
	for magic argument.
	(default_client_connect): Use sm_client_id_prop.
	(default_client_disconnect): Likewise.
	(array_has_sm_client_id_arg): Removed.
	(array_insert_sm_client_id_arg): Now static.
	(gnome_client_set_clone_command): Duplicate RestartCommand if
	clone command is freed.
	(gnome_real_client_connect): Only add magic option to duplicate of
	restart command.
	(gnome_client_set_restart_command): Likewise.
	(array_copy): Now static.
	(array_init_from_arg): Likewise.
	(array_free): Likewise.
	(array_remove_sm_client_id_arg): Removed.

	* stock_demo.c (main): Use new form of gnome_init.
	* ted_demo.c (main): Use new form of gnome_init.
