@@ -1,3 +1,9 @@
+Tue Mar 10 22:27:31 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* gnome-client.c (gnome_client_set_restart_command): Don't insert
+	--sm-client-id option if restart_command is NULL.
+	(gnome_real_client_connect): Likewise.
+
 Tue Mar 10 15:01:05 1998  Federico Mena <federico@nuclecu.unam.mx>
 
 	* gnome-color-selector.c (gnome_color_selector_new): Use the
